# chartextractor

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  debug_components.py  debug_ocr.py  debug_pipeline.py  debug_polarity.py  debug_stages.py  debug_ticks.py  pyproject.toml  requirements.txt  validate_synthetic.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
src/chart_extractor/: __init__.py  axes.py  calibration.py  curve.py  ocr.py  pipeline.py  preprocess.py  sampling.py  types.py
tests/: test_smoke.py
