[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chart-extractor"
version = "0.1.0"
description = "Digitize 2D chart images into (x, y) datasets with uncertainty estimates."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "ChartExtractor contributors" }
]
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "scikit-image>=0.22",
  "scipy>=1.11",
  "pytesseract>=0.3.10",
  "Pillow>=10.0",
  "streamlit>=1.32",
  "pandas>=2.1",
]

[project.urls]
Homepage = "https://github.com/ov9bo/ChartExtractor"
Issues = "https://github.com/ov9bo/ChartExtractor/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
